# ocaml-hipjit

./: .gitignore  CLAUDE.md  README.md  dune  dune-project  hipjit.opam  hipjit.opam.template
hip_ffi/: bindings.ml  bindings_types.ml  dune
hiprtc_ffi/: bindings.ml  bindings_types.ml  dune
src/: dune  hip-original-path.bat  hip.ml  hip.mli  hiprtc.ml  hiprtc.mli
test/: dune  filter_output.ml  saxpy.expected  saxpy.ml
test_no_device/: dune  saxpy_code.expected  saxpy_code.ml
