; Generates the opam package config exposing the resolved HIP SDK bin directory
; as the `hip-runtime-path` variable, so [hipjit.opam.template]'s setenv puts it
; on PATH (this is what makes the amdhip64/hiprtc DLLs loadable at run time
; without a manual PATH edit). [src/hip-path.txt] is the SDK prefix -- the
; no-spaces NTFS junction on Windows, $HIP_PATH / /opt/rocm elsewhere -- and the
; DLLs live in its bin/. Promoted to the build-directory root so opam reads it as
; the package's <name>.config.
(rule
 (target hipjit.config)
 (deps src/hip-path.txt)
 (mode (promote (until-clean)))
 (action
  (with-stdout-to
   hipjit.config
   (echo
    "opam-version: \"2.0\"\nvariables {\n  hip-runtime-path: \"%{read:src/hip-path.txt}/bin\"\n}\n"))))

; Force the config to be built (and promoted) as part of `dune build @install`,
; which is what opam runs, so the file lands at the build root for opam to pick up.
(alias
 (name install)
 (deps hipjit.config))
